--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,2 +1,9 @@
 $primary: #fc0303;
 $secondary: #9254de;
+$white: #ffffff;
+$grey1: #b2b2b2;
+$grey2: #f5f5f5;
+$grey3: #c4c4c4;
+$black: #221f20;
+$black3: #5c5c5c;
+$red: #dd1a22;
