[T1PT-76] Share component (#4)
* [T1PT-77] create button

* [T1PT-79] create input

* [T1PT-80] create input field

* [T1PT-78] create dropdown

* edit comment

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,4 +1,4 @@
-$primary: #fc0303;
+$primary: #DD1A22;
 $secondary: #9254de;
 $white: #ffffff;
 $grey1: #b2b2b2;
@@ -7,3 +7,10 @@ $grey3: #c4c4c4;
 $black: #221f20;
 $black3: #5c5c5c;
 $red: #dd1a22;
+
+$white: #FFFFFF;
+$gray: #C4C4C4;
+$black-gray: #5C5C5C;
+$ligth-gray: #B2B2B2;
+
+
