--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,4 +1,4 @@
-$primary: #DD1A22;
+$primary: #dd1a22;
 $secondary: #9254de;
 $white: #ffffff;
 $grey1: #b2b2b2;
@@ -6,11 +6,10 @@ $grey2: #f5f5f5;
 $grey3: #c4c4c4;
 $black: #221f20;
 $black3: #5c5c5c;
-$red: #dd1a22;
+$grey-bg-fade: #f2f2f2;
+$box-shadow-black: 0px 10px 24px rgba(0, 0, 0, 0.1);
 
-$white: #FFFFFF;
-$gray: #C4C4C4;
-$black-gray: #5C5C5C;
-$ligth-gray: #B2B2B2;
-
-
+$white: #ffffff;
+$gray: #c4c4c4;
+$black-gray: #5c5c5c;
+$ligth-gray: #b2b2b2;
