[T1PT-99] Landing page (#9)

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,6 +10,6 @@ $grey-bg-fade: #f2f2f2;
 $box-shadow-black: 0px 10px 24px rgba(0, 0, 0, 0.1);
 
 $white: #ffffff;
-$gray: #c4c4c4;
-$black-gray: #5c5c5c;
-$ligth-gray: #b2b2b2;
+$grey: #c4c4c4;
+$black-grey: #5c5c5c;
+$ligth-grey: #b2b2b2;
