--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,15 +1,11 @@
-$primary: #dd1a22;
+$primary: #DD1A22;
 $secondary: #9254de;
-$white: #ffffff;
-$grey-1: #b2b2b2;
-$grey-2: #f5f5f5;
-$grey-3: #c4c4c4;
-$black: #221f20;
-$black-3: #5c5c5c;
-$grey-bg-fade: #f2f2f2;
+$white: #FFFFFF;
+$gray-disable : #B2B2B2;
+$gray-bg-fade: #F2F2F2;
+$grey-hover: #DFDFDF;
+$mid-black: #221F20;
+$grey-text: #5C5C5C;
 $box-shadow-black: 0px 10px 24px rgba(0, 0, 0, 0.1);
-
-$white: #ffffff;
-$grey: #c4c4c4;
-$black-grey: #5c5c5c;
-$ligth-grey: #b2b2b2;
+$success: #31BD89;
+$warning: #FFBA08;
