--- a/assets/scss/agGridStyleOverride.scss
+++ b/assets/scss/agGridStyleOverride.scss
@@ -212,17 +212,27 @@ div[role='row'] {
   height: auto !important;
 }
 
-.ag-theme-material .ag-header {
-  border-bottom: none;
-  height: 52px !important;
-  min-height: 52px !important;
-}
+.ag-theme-material{
+  .ag-header {
+    border-bottom: none;
+    height: 52px !important;
+    min-height: 52px !important;
+  }
 
-.ag-theme-material .ag-row{
-  border-color: #e2e2e2;
-  border-left: none;
-  border-right: none;
-  border-top: none;
+  .ag-row{
+    border-color: #e2e2e2;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+  }
+
+  .ag-row-selected {
+    background-color: rgba(255, 0, 0, 0.03);
+  }
+
+  .ag-checkbox-input-wrapper.ag-checked::after{
+    color: $primary !important;
+  }
 }
 
 .table-search {
