[T1PT-66] new brand (#30)
[T1PT-154] ui create new brand 
[T1PT-157] upload form data

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -4,6 +4,7 @@ $white: #FFFFFF;
 $gray-disable : #B2B2B2;
 $gray-bg-fade: #F2F2F2;
 $grey-hover: #DFDFDF;
+$grey-bg-hover: #FAFAFA;
 $mid-black: #221F20;
 $grey-text: #5C5C5C;
 $box-shadow-black: 0px 10px 24px rgba(0, 0, 0, 0.1);
