--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,6 +5,7 @@ $gray-disable : #B2B2B2;
 $gray-bg-fade: #F2F2F2;
 $grey-hover: #DFDFDF;
 $grey-bg-hover: #FAFAFA;
+$black: #000000;
 $mid-black: #221F20;
 $grey-text: #5C5C5C;
 $box-shadow-black: 0px 10px 24px rgba(0, 0, 0, 0.1);
