[T1PT-39] Company list (#45)
* [T1TP-39] Added frontend and implement api

* [T1TP-197] Implement table

Co-authored-by: Wiwat Patanaprasitchai <>

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,5 +1,9 @@
 @import './_variables.scss';
 
+::-webkit-input-placeholder {
+  color: $gray-disable;
+}
+
 .toasted{
   width: 440px !important;
   height: 56px !important;
