[T1PT-264], [T1PT-280] section2 brand ui & api (#52)
* [T1PT-264] tab ui

* [T1PT-264] tab brand

* [T1PT-264] section 2 brand tab

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,6 +5,7 @@ $gray-disable : #B2B2B2;
 $gray-bg-fade: #F2F2F2;
 $grey-hover: #DFDFDF;
 $grey-bg-hover: #FAFAFA;
+$grey3: #EFEFEF;
 $black: #000000;
 $mid-black: #221F20;
 $grey-text: #5C5C5C;
