--- a/assets/scss/agGridStyleOverride.scss
+++ b/assets/scss/agGridStyleOverride.scss
@@ -12,9 +12,9 @@
 
 @import './_variables.scss';
 
+
 .ag-grid-table {
   color: inherit !important;
-
 
   &.num-0 {
     height: 150px !important;
@@ -84,7 +84,7 @@
   }
 
   .ag-cell-inline-editing {
-    height: 40px !important;
+    // height: 40px !important;
   }
 
   .ag-grid-table-actions-left {
@@ -125,6 +125,31 @@
   ::-webkit-scrollbar-track {
     background: $grey-text;
     border-radius: 20px;
+  }
+
+  .row-status {
+    border-radius: 16px;
+    height: 22px;
+    width: 100px;
+    font-size: 12px;
+    font-weight: 700;
+    text-align: center;
+
+    &.active{
+      color: $success;
+      border: 2px solid $success;
+      padding: 2px 14px;
+    }
+    &.in-active{
+      color: $gray-disable;
+      border: 2px solid $gray-disable;
+      padding: 2px 7.5px;
+    }
+    &.hold{
+      color: $warning;
+      border: 2px solid $warning;
+      padding: 2px 9px;
+    }
   }
 }
 
@@ -220,13 +245,6 @@
   cursor: pointer;
 }
 
-.ag-center-cols-container {
-  width: 100% !important;
-  div[role='row'] {
-    height: 40px !important;
-  }
-}
-
 .ag-cell-focus {
   border: none !important;
 }
@@ -320,30 +338,51 @@ div[role='row'] {
 .custom-row {
   text-align: left;
   text-overflow: ellipsis;
-    width: 100%;
-  
-  .row-status {
-    border-radius: 16px;
-    height: 22px;
-    width: 100px;
-    font-size: 12px;
-    font-weight: 700;
-    text-align: center;
+  width: 100%;
+}
 
-    &.active{
-      color: $success;
-      border: 2px solid $success;
-      padding: 2px 14px;
-    }
-    &.in-active{
-      color: $gray-disable;
-      border: 2px solid $gray-disable;
-      padding: 2px 7.5px;
-    }
-    &.hold{
-      color: $warning;
-      border: 2px solid $warning;
-      padding: 2px 9px;
-    }
+.custom-row-80 {
+  text-align: left;
+  text-overflow: ellipsis;
+  width: 100%;
+}
+
+.row-h-80{
+  .ag-grid-table {
+  &.num-0 {
+    height: 150px !important;
+  }
+  &.num-1 {
+    height: 150px !important;
+  }
+  &.num-2 {
+    height: 230px !important;
+  }
+  &.num-3 {
+    height: 310px !important;
+  }
+  &.num-4 {
+    height: 390px !important;
+  }
+  &.num-5 {
+    height: 470px !important;
+  }
+  &.num-6 {
+    height: 550px !important;
+  }
+  &.num-7 {
+    height: 630px !important;
+  }
+  &.num-8 {
+    height: 710px !important;
+  }
+  &.num-9 {
+    height: 790px !important;
+  }
+  &.num-10 {
+    height: 870px !important;
+  }
+  height: 870px !important;
+
   }
 }
