[T1PT-291] section2 branch ui (#54)
* [T1PT-291] tab branch

* [T1PT-291] section 2 branch tab ui

* delete unused

--- a/assets/scss/agGridStyleOverride.scss
+++ b/assets/scss/agGridStyleOverride.scss
@@ -14,6 +14,10 @@
 
 
 .ag-grid-table {
+  .ag-overlay-no-rows-center{    
+    visibility: hidden;
+  }
+
   color: inherit !important;
 
   &.num-0 {
