[T1PT-581] change color disable textbox

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -2,6 +2,7 @@ $primary: #DD1A22;
 $primary-bg: #FFE9E9;
 $secondary: #9254de;
 $white: #FFFFFF;
+$disabled-for-textbox: #ECECEC;
 $gray-disable : #B2B2B2;
 $gray-bg-fade: #F2F2F2;
 $grey-hover: #DFDFDF;
