--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,6 +4,11 @@
   color: $gray-disable;
 }
 
+.vs--disabled .vs__clear, .vs--disabled .vs__dropdown-toggle, .vs--disabled .vs__open-indicator, .vs--disabled .vs__search, .vs--disabled .vs__selected {
+  background: $disabled-for-textbox  !important;
+  color: $gray-disable !important;
+}
+
 .toasted{
   width: 440px !important;
   height: 56px !important;
