--- a/components/molecules/brand-feature/BrandFeatureBody/BrandFeatureBody.scss
+++ b/components/molecules/brand-feature/BrandFeatureBody/BrandFeatureBody.scss
@@ -35,6 +35,7 @@
           margin-left: 36px;
           height: 16.67px;
           width: 15.36px;
+          cursor: pointer;
         }
       }
     }
