--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,7 +6,11 @@
 
 .vs--disabled .vs__clear, .vs--disabled .vs__dropdown-toggle, .vs--disabled .vs__open-indicator, .vs--disabled .vs__search, .vs--disabled .vs__selected {
   background: $disabled-for-textbox  !important;
-  color: $gray-disable !important;
+  color: $mid-black !important;
+}
+
+.input-field .input-field-input.disable {
+  color: $mid-black !important;
 }
 
 .toasted{
