--- a/components/molecules/table-component/TableComponent.scss
+++ b/components/molecules/table-component/TableComponent.scss
@@ -115,3 +115,25 @@
     }
   }
 }
+
+.data-not-found-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 100px;
+
+  &.icon-margin {
+    margin-top: 28px;
+    margin-bottom: 150px;
+  }
+}
+.data-not-found-text {
+  font-size: 16px;
+  color: $mid-black;
+  margin-top: 13px;
+}
+.data-not-found-icon {
+  width: 51px;
+  height: 57px;
+}
