--- a/components/molecules/table-component/TableComponent.scss
+++ b/components/molecules/table-component/TableComponent.scss
@@ -121,10 +121,14 @@
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
-  margin-bottom: 100px;
+
+  &.text-margin{
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
 
   &.icon-margin {
-    margin-top: 28px;
+    margin-top: 150px;
     margin-bottom: 150px;
   }
 }
