[T1PT-784] [T1PT-785] [T1PT-786] View User List Page (#273)
* [T1PT-786] user list non tab table

* [T1PT-786] cosmetic

* [T1PT-784] [T1PT-785] [T1PT-786] View User List Page

- the1
- bu
- partner

* [T1PT-786] remove file not used

--- a/components/molecules/table-component/TableComponent.scss
+++ b/components/molecules/table-component/TableComponent.scss
@@ -4,6 +4,10 @@
   display: flex;
   justify-content: space-between;
 
+  .btn-container{    
+    display: flex;
+  }
+
   .add-new-btn {
     display: flex;
     justify-content: center;
@@ -83,6 +87,11 @@
   align-items: center;
   justify-content: space-between;
   padding: 16px 23px;
+
+  .sum-select{
+    color: $primary;
+    font-weight: 700;
+  }
 
   .dropdown {
     width: 90px;
