--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,16 +1,18 @@
 $primary: #DD1A22;
-$primary-bg: #FFE9E9;
+$tritery-red: #FFE9E9;
 $secondary: #9254de;
 $white: #FFFFFF;
 $disabled-for-textbox: #ECECEC;
 $gray-disable : #B2B2B2;
 $gray-bg-fade: #F2F2F2;
 $grey-hover: #DFDFDF;
+$grey-hover-dropdown: #F8F8F8;
 $grey-bg-hover: #FAFAFA;
 $grey3: #EFEFEF;
 $black: #000000;
 $mid-black: #221F20;
 $grey-text: #5C5C5C;
+$scroll-bg: #C4C4C4;
 $box-shadow-black: 0px 10px 24px rgba(0, 0, 0, 0.1);
 $success: #31BD89;
 $warning: #FFBA08;
