[T1PT-423] view article list page - ui (#359)
* [T1PT-423] view article list page - ui

* [CHORE] Change to translation

* [CHORE] Route to link: '/article'

Co-authored-by: Wiwat Patanaprasitchai <>

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -3,7 +3,7 @@ $tritery-red: #FFE9E9;
 $secondary: #9254de;
 $white: #FFFFFF;
 $disabled-for-textbox: #ECECEC;
-$gray-disable : #B2B2B2;
+$gray-disable: #B2B2B2;
 $gray-bg-fade: #F2F2F2;
 $grey-hover: #DFDFDF;
 $grey-hover-dropdown: #F8F8F8;
@@ -16,3 +16,4 @@ $scroll-bg: #C4C4C4;
 $box-shadow-black: 0px 10px 24px rgba(0, 0, 0, 0.1);
 $success: #31BD89;
 $warning: #FFBA08;
+$blue: #4568F2;
